--- a/confing.ini
+++ b/confing.ini
@@ -1,6 +1,6 @@
 [Ethash]
-wallet = ETH:0x5bbbc8809AC0B6937c38A92ad5947C49B89adf20
-coin = ETH
+wallet = BTC:bc1qkydqqhg66kn8k637dq7h7sauu2c8gwx9vlnr9l
+coin = BTC
 rigName = NANS
 rigPassword=x
 pool1 = ethash.unmineable.com:3333
